\"namespace SogaRecibos.Application.Receipts.Commands; public class CreateReceiptHandler { }\" 
